--- a/fileReader/nbproject/project.properties
+++ b/fileReader/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/fileReader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.14.2.1.jar=C:\\Users\\wgjunior\\Desktop\\Elei\u00e7\u00f5es\\sqlite-jdbc-3.14.2.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.14.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
